Fix word breaks in short code in manual

--- a/www/css/manual.css
+++ b/www/css/manual.css
@@ -169,7 +169,8 @@ code.marc{
 	background: #333;
 	border-radius: .25rem;
 	white-space: normal;
-	word-break: break-all;
+	word-break: normal;
+	overflow-wrap: break-word;
 	padding: 0 .25rem;
 	color: #fff;
 	margin: 0 .2rem;
